--- a/src/assets/i18n/ae.json
+++ b/src/assets/i18n/ae.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"لوحات القيادة والحاجيات",
     "Dashboard": "لوحة القيادة",
     "Default": "إفتراضي",
-    "Ecommerce":"التجارة الإلكترونية",
+    "ecommerce":"التجارة الإلكترونية",
     "Widgets":"الحاجيات",
     "Chart":"مخطط",
     "Applications":"التطبيقات",
