--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"仪表板，小部件",
     "Dashboard": "仪表板",
     "Default": "默认",
-    "Ecommerce":"电子商务",
+    "ecommerce":"电子商务",
     "Widgets":"小部件",
     "Chart":"图表",
     "Applications":"应用领域",
