--- a/src/assets/i18n/du.json
+++ b/src/assets/i18n/du.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"Dashboards, widgets",
     "Dashboard": "Dashboard",
     "Default": "Standaard",
-    "Ecommerce":"E-commerce",
+    "ecommerce":"E-commerce",
     "Widgets":"Widgets",
     "Chart":"Grafiek",
     "Applications":"Toepassingen",
