--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"Dashboards,Widgets",
     "Dashboard": "Dashboard",
     "Default": "Default",
-    "Ecommerce":"Ecommerce",
+    "ecommerce":"ecommerce",
     "Widgets":"Widgets",
     "Chart":"Chart",
     "Applications":"Applications",
