--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"Cuadros de mando, widgets",
     "Dashboard": "Tablero",
     "Default": "Defecto",
-    "Ecommerce":"Comercio electrónico",
+    "ecommerce":"Comercio electrónico",
     "Widgets":"Widgets",
     "Chart":"Gráfico",
     "Applications":"Aplicaciones",
