--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -3,7 +3,7 @@
       "Dashboards,Widgets":"Tableaux de bord, widgets",
       "Dashboard": "Tableau de bord",
       "Default": "Défaut",
-      "Ecommerce":"Commerce électronique",
+      "ecommerce":"Commerce électronique",
       "Widgets":"Widgets",
       "Chart":"Graphique",
       "Applications":"Applications",
