--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -3,7 +3,7 @@
     "Dashboards,Widgets":"Painéis, Widgets",
     "Dashboard": "painel de controle",
     "Default": "Padrão",
-    "Ecommerce":"Comércio eletrônico",
+    "ecommerce":"Comércio eletrônico",
     "Widgets":"Widgets",
     "Chart":"Gráfico",
     "Applications":"Formulários",
